double scroll fix attempt

--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,6 @@ transition: .7s;
   align-items: center;
   padding: 0;
   margin-top: 2vh;
-  height: 90vh;
   width: 100%;
   text-align: center;
   padding: 0;
@@ -143,7 +142,6 @@ transition: .7s;
   align-items: center;
   padding: 0;
   margin-top: 2vh;
-  height: 100vh;
   width: 100%;
   text-align: center;
   padding: 0;
